--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "push",
+  "name": "firebase_notification",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "firebase": "^9.14.0",
+    "axios": "^1.2.1",
+    "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -22,7 +24,12 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "jsx-a11y/anchor-is-valid": "off",
+      "no-undef": "off",
+      "no-restricted-globals": "off"
+    }
   },
   "browserslist": {
     "production": [
